tests/snapshots/runtime_error_fixtures/primop_string_len_type.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/primop_string_len_type.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
• 1 error • examples/runtime_errors/primop_string_len_type.flx
error[E1004]: primop string_len expected String, got Int

  examples/runtime_errors/primop_string_len_type.flx:1:1
  |
1 | fn main() -> Unit {
  | ^^^^^^^^^^^^^^^^^^^
2 |     let ignored = string_len(1)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
3 | }
  | ^

Stack trace:
  at main (examples/runtime_errors/primop_string_len_type.flx:1:1)
  at <main>
== jit ==
status: 1
stdout:
<empty>
stderr:
missing JIT CFG named call target: "string_len"
